--- a/app/views/graduate_student_infos/_form.html.erb
+++ b/app/views/graduate_student_infos/_form.html.erb
@@ -39,15 +39,26 @@
     <%= f.label :international %><br />
     <%= f.select :international, ["yes","no"] %>
   </div>
+ <% if false %>
+  <div class="field">
+    <%= f.label :cohort_season %><br />
+    <%= f.select :cohort_season, ["fall","spr"] %>
+  </div>
+  <div class="field">
+    <%= f.label :cohort_year %><br />
+    <%= f.date_select :cohort_year, :prompt => { :year => 'Select year' } %>
+  </div>
+  <% end %>
   <div class="field">
     <%= f.label :cohort %><br />
     <%= f.text_field :cohort %>
   </div>
-
+<% if false %>
   <div class="field">
     <%= f.label :start_date %><br />
     <%= f.date_select :start_date, :prompt => { :day => 'Select day', :month => 'Select month', :year => 'Select year' } %>
   </div>
+  <% end%>
   <div class="field">
     <%= f.label :must_achieve_cand_by %><br />
     <%= f.date_select :must_achieve_cand_by, :prompt => { :day => 'Select day', :month => 'Select month', :year => 'Select year' } %>
